1.7.12+svn:
 * Engine:
   * Fix bug #15146: made kill event with animate="yes" recheck the presence of unit before animating, fixing the assertion failure (in case the unit is removed by other wml events like last breath)
 * Language and i18n:
   * Updated translations: Finnish, German, Russian, Serbian
   * The manual now does support translations of alternative texts for images
     (bug #14874)

1.7.12-1.8beta5:
 * AI
   * Fixed unit_at formula ai function to return null on null input
 * Campaigns:
   * Fixed a bug in several scenarios causing some enemy units to disappear when
     loading a save
 * Language and i18n:
   * Updated translations: Czech, Finnish, French, German, Hebrew, Italian,
     Latin, Russian, Shavian, Slovak, Spanish
 * Multiplayer:
   * Non-human null controllers are no longer set to ai
   * Don't allow a 0-sides game to be started (Debian bug #563310)
 * Music and sound effects:
   * New version of sad.ogg (Sad music) by Tyler Johnson
 * User interface:
   * Switched back to the tiled background for gui2
   * Improved to looks in tiny-gui
   * Add a new transient error message
   * Convert several old style message dialog to the new style
   * Allow listboxes to add rows at every place instead of at the end only
   * Improved the speed of the new lobby
 * WML Engine:
   * Removed bogus merging of the old unit type's movetype when advancing
     (fixes bug #15055)
   * [unit] upkeep now accepts the 'free' value as a synonym for 'loyal'
     It was widely used this way and worked because its integer value is 0
 * Miscellaneous and bugfixes:
   * Fix errors in tutorial when the player unexpectedly kills certain enemy
     units in scenario 2 (bug #15037)
   * Fix orcs being able to play their turn twice in tutorial scenario 2
     (bug #14926)
   * Fix missing dialog in tutorial scenario 1 (patch #1399)
   * Fix scrolling during animation (bug 13106)
   * Fix drakes tipping their wings in the water when flying